--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'TitilliumText22L Lt', sans-serif;
 }
 
 .wrapper {
-  height: 100vh;
+  display: block;
+  min-height: 1372;
   background: url('img/background.jpg') center/cover no-repeat;
   padding: 5px;
 }
@@ -25,8 +27,40 @@ main {
   margin-top: 25px;
 }
 
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .form__header {
   color: #fff;
   font-size: 32px;
-  font-family: Tit;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+  margin-bottom: 34px;
+  text-align: center;
+}
+
+form {
+  background-color: #fff;
+  display: block;
+  padding: 10px;
+}
+
+form.register {
+  width: 382px;
+  height: 420px;
+  border-radius: 3px;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+input [type='text'],
+[type='password'],
+[type='email'] {
+  margin: 22px;
 }
