--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 main {
   display: flex;
   justify-content: space-around;
-  margin-top: 25px;
+  margin: 25px;
 }
 
 .column {
@@ -45,22 +45,29 @@ main {
 form {
   background-color: #fff;
   display: block;
-  padding: 10px;
+  padding: 22px;
+  width: 384px;
+  margin: 20px;
 }
 
 form.register {
-  width: 382px;
   height: 420px;
   border-radius: 3px;
 }
 
 .inputs {
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
 }
 
-input [type='text'],
+.inputs > * {
+  height: 40px;
+  margin-bottom: 22px;
+}
+
+/* input [type='text'],
 [type='password'],
 [type='email'] {
   margin: 22px;
-}
+} */
