--- a/style.css
+++ b/style.css
@@ -55,30 +55,17 @@ form {
   border: 18px solid rgba(0, 0, 0, 0.205);
 }
 
-input:not([type='checkbox']) {
+input:not([type='checkbox']),
+select {
   display: block;
+  padding-left: 81px;
   width: 100%;
   height: 40px;
   margin-bottom: 20px;
 }
-
-/* label {
-  display: inline-block;
-  width: 100%;
-} */
 
 .email__message {
   width: 100%;
   resize: none;
   margin-bottom: 20px;
 }
-
-/* form.register {
-  height: 420px;
-} */
-
-/* input [type='text'],
-[type='password'],
-[type='email'] {
-  margin: 22px;
-} */
