--- a/style.css
+++ b/style.css
@@ -57,12 +57,14 @@ form {
 }
 
 div.input {
+  position: relative;
   background-image: linear-gradient(0deg, #f4f4f4, white);
 }
 
 input:not([type='checkbox']),
 select {
   display: block;
+  position: relative;
   padding-left: 81px;
   width: 100%;
   height: 40px;
@@ -73,6 +75,23 @@ select {
   background-color: transparent;
   background-position: left 16px center;
   background-repeat: no-repeat;
+}
+
+div.input::before {
+  content: linear-gradient(90deg, #fff, #dedede);
+  position: absolute;
+  top: 6px;
+  left: 58px;
+  height: 31px;
+  width: 2px;
+  background-color: black;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border: 1px solid olivedrab;
+  box-shadow: 0 0 3px #91cc1b;
 }
 
 select,
