--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ form {
   border: 18px solid rgba(0, 0, 0, 0.205);
 }
 
-div.input {
+div.input, textarea {
   position: relative;
   background-image: linear-gradient(0deg, #f4f4f4, white);
 }
@@ -77,14 +77,15 @@ select {
   background-repeat: no-repeat;
 }
 
-div.input::before {
-  content: linear-gradient(90deg, #fff, #dedede);
+ div.input::before {
+   content: '';
+  content: linear-gradient(90deg, #fff, #cacaca);
+  display: block;
   position: absolute;
   top: 6px;
   left: 58px;
   height: 31px;
   width: 2px;
-  background-color: black;
 }
 
 input:focus,
@@ -138,4 +139,47 @@ select.map {
   width: 100%;
   resize: none;
   margin-bottom: 20px;
+}
+
+.checkbox-label {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  position: relative;
+  height: 23px;
+  font-size: 17px;
+  color: #afafaf;
+  font-weight: 300;
+  margin-bottom: 12px;
+}
+
+.checkbox-label.float {
+  display: inline-flex;
+}
+.checkbox-label input {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+}
+
+.checkbox-label::before {
+  content: '';
+  display: inline-block;
+  height: 23px;
+  width: 23px;
+  margin-right: 15px;
+  border-radius: 3px;
+  filter: drop-shadow(1px 1.732px 0px #ffffff);
+  background-image: linear-gradient(0deg, #f4f4f4 0%, #f8f8f8 100%);
+  border: 1px solid #c6c6c6;
+}
+
+ label.checkbox-label:hover::before{
+background-color: #ddd;
+background-image: none;
+}
+
+input:checked .checkbox-label::before{
+  background-color: orangered;
+  background-image: none;
 }
