added media queries

--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ select.map {
 }
 
 .checkbox-label.float {
+  margin-top: 15px;
   display: inline-flex;
 }
 .checkbox-label input {
@@ -192,10 +193,11 @@ button{
   border: 1px solid #3a9a00;
   height: 49px;
   width: 149px;
+  padding: 0 10px;
   cursor: pointer;
   color: #fff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.432);
-  font-size: 24px;
+  font-size: 1.5rem;
   border-radius: 3px;
   text-align: center;
   line-height: 24px;
@@ -241,11 +243,58 @@ button.reject:focus{
   box-shadow: 0 0 3px 2px #df2a12;
 }
 
-button:active{
+button.reject:active{
   text-shadow: none;
   box-shadow: 0 0 3px 2px #df2a12, inset 0 0 3px 2px #e69e9e;
 }
 
-.logo__bottom img{
-  filter: drop-shadow(2px 3px 2px rgba(20, 20, 20, 1)) opacity(30%);
+.logo__bottom{
+ filter: drop-shadow(2px 3px 2px rgba(20, 20, 20, 1));
+  height: 130px;
+  width: 353px;
+ mix-blend-mode: overlay ;
+}
+
+/*************media querys******************/
+
+@media (max-width: 865px){
+  .logo__top{
+    height: 95px;
+
+  }
+  main{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo__bottom img{
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+@media (max-width: 445px){
+  .logo__top{
+    height: 80px;
+  }
+
+  form {
+    width: 320px;
+  }
+
+  button:not(.big){
+    max-width: 114px;
+    font-size: 1.2rem;
+  }
+
+  label +button.right{
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .logo__bottom img{
+    width: 100%;
+    height: auto;
+  }
 }
